# Ai-agent

./: DESIGN.json  DESIGN.md  PRODUCT.md  add_meta_charset.py  ai_engine.py  app.py  database.py  main.py  pyproject.toml
AI_Agent_Project/: ai_engine.py  app.py  main.py  pyproject.toml
AI_Agent_Project/controllers/: ai_controller.py
AI_Agent_Project/templates/: dashboard.html  index.html
controllers/: admin_controller.py  ai_controller.py  api_controller.py  auth_controller.py
services/: data_processor.py  report_service.py
static/css/: impeccable-theme.css  style.css
static/js/: auth.js
templates/: admin_dashboard.html  admin_feedbacks.html  admin_settings.html  dashboard.html  forgot_password.html  index.html  reset_password.html  shared_view.html
uploads/: Bang_Tinh_Hoc_Phi_Sinh_Vien.xlsx  Bao_cao_doanh_thu_nha_hang_Thang04_2026.xlsx  K23 - Đồ án CS_CN, Thầy Khải.xlsx  Quan-ly-nhap-xuat-ton.xlsx  data.xlsx
